# a-cli

./: .gitignore  README.md  config.example.toml  pyproject.toml
a_cli/: __init__.py  config.py  executor.py  llm.py  main.py  safety.py  ui.py
tests/: show_os_info.py  test_args.py  test_os_info.py  test_safety.py  test_safety_integration.py  test_user_permission.py
